--- a/source/_posts/一个小型微信自动回复机器人.md
+++ b/source/_posts/一个小型微信自动回复机器人.md
@@ -13,6 +13,7 @@ categories: 开发心得
 在程序运行时，会先弹出一个QRuuid，通过微信扫码后便可登陆。将itchat.autologin方法中hotreload的参数设置为true时，会生成一个itchat.pkl的十六进制文件，记录账号的登陆状态。
 以下是程序源码
 =======================================================================
+```python
 	import requests
 	import itchat
 	def Turing_response(msg):
@@ -39,4 +40,6 @@ categories: 开发心得
 		#a or b 意思是如果a不为None，则返回a，否则返回b
 	itchat.auto_login(hotReload=True)
 	itchat.run()
+```
+
 也可以浏览我的github仓库。亲测该聊天机器人可以查询天气、快递单号以及其他信息，__不能识别图片表情包。__ 如果需大量调用可购买图灵机器人的商用api。
