--- a/source/_posts/雪山游记.md
+++ b/source/_posts/雪山游记.md
@@ -23,3 +23,4 @@ layout: post
 ![love-story](/images/love-story/loveStory3.jpeg)
 ![love-story](/images/love-story/loveStory4.jpeg)
 如果可以，我想回到3个月前，我一定天天围着你转。我想你。
+![love-story](/images/love-story/loveStory8.jpeg)
